work skills almost done

--- a/devinmajordotcom/Views/Home/Index.cshtml
+++ b/devinmajordotcom/Views/Home/Index.cshtml
@@ -52,3 +52,4 @@
 @Html.Partial("../Portfolio/_NewTechSkill")
 @Html.Partial("../Portfolio/_NewLanguageSkill")
 @Html.Partial("../Portfolio/_NewContactLink")
+@Html.Partial("../Portfolio/_NewWorkSkill")
