--- a/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_ManagePortfolio.cshtml
@@ -329,7 +329,7 @@
                                         {
                                             className = "active";
                                         }
-                                        <li data-target="#myCarousel" data-slide-to="@counter" class="@className"></li>
+                                        <li data-target="#myCarousel" id="indicator_@counter" data-slide-to="@counter" class="@className"></li>
                                         counter++;
                                     }
                                 }
@@ -365,7 +365,7 @@
                                                         style="font-size: 50px; margin-bottom: 1vh;"></button>
                                                 @Html.TextBoxFor(x => x.HighlightedWorkSkills[realCount].SkillTitle, new {@class = "form-control text-center text-uppercase tm-work-h3", @style = "color:white !important;", @placeholder = "Skill Title (Ex: Paleontology)"})
                                                 <hr>
-                                                @Html.TextAreaFor(x => x.HighlightedWorkSkills[realCount].SkillDetails, new {@class = "tinymce", @rows = "4", @placeholder = "Skill Description (Ex: I dig up bones and recreate skeletons of ancient, extinct animal species)"})
+                                                @Html.TextAreaFor(x => x.HighlightedWorkSkills[realCount].SkillDetails, new {@class = "form-control tinymce", @rows = "4", @placeholder = "Skill Description (Ex: I dig up bones and recreate skeletons of ancient, extinct animal species)"})
                                                 <br />
                                                 <div class="row">
                                                     <div class="col-sm-12 text-center">
