--- a/devinmajordotcom/Views/Portfolio/_NewWorkSkill.cshtml
+++ b/devinmajordotcom/Views/Portfolio/_NewWorkSkill.cshtml
@@ -8,7 +8,7 @@
             <button data-placement="left" class="btn btn-default iconpicker" name="HighlightedWorkSkills[{{newID}}].SkillIcon" role="iconpicker" data-iconset="fontawesome" data-icon="fa-envelope" type="button" style="font-size: 50px; margin-bottom: 1vh;"><i class="fa fa-envelope"></i><input type="hidden" name="HighlightedWorkSkills[{{newID}}].SkillIcon" value=""><span class="caret"></span></button>
             <input class="form-control text-center text-uppercase tm-work-h3" data-val="true" data-val-length="Skill Name cannot be longer than 100 characters." data-val-length-max="100" data-val-required="The Skill Name * :  field is required." id="HighlightedWorkSkills_{{newID}}__SkillTitle" name="HighlightedWorkSkills[{{newID}}].SkillTitle" placeholder="Skill Title (Ex: Paleontology)" style="color:white !important;" type="text" value="">
             <hr>
-            <textarea placeholder = "Skill Description (Ex: I dig up bones and recreate skeletons of ancient, extinct animal species)" name="HighlightedWorkSkills[{{newID}}].SkillDetails" class="tinymce" rows="4" id="HighlightedWorkSkills_{{newID}}__SkillDetails"></textarea>       
+            <textarea placeholder = "Skill Description (Ex: I dig up bones and recreate skeletons of ancient, extinct animal species)" name="HighlightedWorkSkills[{{newID}}].SkillDetails" class="form-control tinymce" rows="4" id="HighlightedWorkSkills_{{newID}}__SkillDetails"></textarea>       
             <br/>
             <div class="row">
                 <div class="col-sm-12 text-center">
