--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -812,7 +812,7 @@ input[type="checkbox"]:checked + .slider:before {
     width: 100%;
 }
 
-.mediaDashboardLink, .bannerLink, .siteLink, .languageSkill, .techSkill {
+.mediaDashboardLink, .bannerLink, .siteLink, .languageSkill, .techSkill, .projectLink {
     border: 1px solid white;
     padding: 5px;
     border-radius: 5px;
