--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
 @Scripts.Render("~/bundles/customScripts")
 @Scripts.Render("~/bundles/FineUploader/fineUploaderScripts")
 @Scripts.Render("~/bundles/tinymce/tinymceScripts")
-<script src="@Url.Content("~/signalr/hubs")"></script>
+<script runat="server" src="@Url.Content("~/signalr/hubs")"></script>
 @RenderSection("scripts", required: false)
 
 </body>
