--- a/devinmajordotcom/Views/Shared/_MediaLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_MediaLayout.cshtml
@@ -29,7 +29,7 @@
 @Scripts.Render("~/bundles/modernizr")
 @Scripts.Render("~/bundles/bootstrap")
 @Scripts.Render("~/bundles/mediaScripts")
-
+@RenderSection("scripts", required: false)
 </body>
 
 </html>
