error pages working again

--- a/devinmajordotcom/Views/MediaDashboard/Index.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/Index.cshtml
@@ -133,7 +133,7 @@
         }
         else
         {
-            @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "MediaDashboard", "Index"))
+            @Html.Partial("../Shared/_Error", new HandleErrorInfo(new Exception(), "MediaDashboard", "Index"))
         }
 
     </div>
