--- a/devinmajordotcom/Views/Portfolio/Index.cshtml
+++ b/devinmajordotcom/Views/Portfolio/Index.cshtml
@@ -305,7 +305,7 @@
             <div class="row">
                 <div class="col-md-2 col-sm-1"></div>
                 <div class="col-md-8 col-sm-10">
-                    @Html.Partial("../Shared/Error", new HandleErrorInfo(new Exception(), "Portfolio", "Index"))
+                    @Html.Partial("../Shared/_Error", new HandleErrorInfo(new Exception(), "Portfolio", "Index"))
                 </div>
                 <div class="col-md-2 col-sm-1"></div>
             </div>
