--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -52,16 +52,19 @@
                                             </div>
                                         </div>
                                         <br />
-                                        <div class="row">
+                                        <div class="row text-center">
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.UserName)
                                             </div>
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
+                                            <div class="spinner" style="display: none;">
+                                                <span class="spinner-rotate"></span>
+                                            </div>
                                         </div>
                                         <br/>
-                                        <button type="submit" class="form-control" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
+                                        <button type="submit" class="form-control modalSubmit" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
 
                                     }
                                 </div>
