--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     
     <style>
         .site-wrapper:before {
-            background-image: url('@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(config.BackgroundImage))');            
+            background-image: url('@config.BackgroundImage');            
         }
     </style>
 
