--- a/devinmajordotcom/Views/MyHome/BlogPost.cshtml
+++ b/devinmajordotcom/Views/MyHome/BlogPost.cshtml
@@ -32,7 +32,7 @@
 
             <div class="col-lg-12">
                 <div class="blog-image">
-                    <img src="@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(Model.BackgroundImage))" class="img-responsive img-fluid rounded" alt="Blog Post Image">
+                    <img src="@Model.BackgroundImage" class="img-responsive img-fluid rounded" alt="Blog Post Image">
                 </div>
             </div>
 
