--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -26,7 +26,7 @@
     
     <style>
         #home {
-            background-image: url('@String.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(userConfigViewModel.BackgroundImage))');
+            background-image: url('@userConfigViewModel.BackgroundImage');
         }
     </style>
 
