fixed up some crap

--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     
     <style>
         .site-wrapper:before {
-            background-image: url('@config.BackgroundImage');            
+            background-image: url('@Url.Content(config.BackgroundImage)');            
         }
     </style>
 
