--- a/devinmajordotcom/Views/MyHome/_AddBlogPostForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_AddBlogPostForm.cshtml
@@ -77,7 +77,7 @@
             <br/>
             <div clas="col-sm-12 text-center">
                 @Html.HiddenFor(x => x.BackgroundImage, new {@class = "favoriteBackgroundImage BackgroundImage", activeimage="false"})
-                <img src="@Model.BackgroundImage" activepreview="false" id="previewImage" style="display: inline-block;" class="img-responsive previewImage" alt="Background Image">
+                <img src="@Url.Content(Model.BackgroundImage)" activepreview="false" id="previewImage" style="display: inline-block;" class="img-responsive previewImage" alt="Background Image">
                 <br/>
                 @Html.Raw(uploadButton)
             </div>
