--- a/devinmajordotcom/Views/MyHome/_AddFavoriteForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_AddFavoriteForm.cshtml
@@ -112,8 +112,8 @@
             </div>
             <br/>
             <div clas="col-sm-12 text-center">
-                @Html.Hidden("BackgroundImage", Convert.ToBase64String(Model.BackgroundImage), new { @class = "BackgroundImage favoriteBackgroundImage", activeimage="false" })
-                <img src="@Model.BackgroundImage" id="previewImage" activepreview="false" style="display: inline-block;" class="img-responsive previewImage" alt="Background Image">
+                @Html.Hidden("BackgroundImage", Model.BackgroundImage, new { @class = "BackgroundImage favoriteBackgroundImage", activeimage="false" })
+                <img src="@Url.Content(Model.BackgroundImage)" id="previewImage" activepreview="false" style="display: inline-block;" class="img-responsive previewImage" alt="Background Image">
                 <br/>
                 @Html.Raw(uploadButton)
             </div>
