--- a/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
+++ b/devinmajordotcom/Views/Shared/_HomeLayout.cshtml
@@ -26,7 +26,7 @@
     
     <style>
         #home {
-            background-image: url('@userConfigViewModel.BackgroundImage');
+            background-image: url('@Url.Content(userConfigViewModel.BackgroundImage)');
         }
     </style>
 
