--- a/devinmajordotcom/Views/MyHome/BlogPost.cshtml
+++ b/devinmajordotcom/Views/MyHome/BlogPost.cshtml
@@ -32,7 +32,7 @@
 
             <div class="col-lg-12">
                 <div class="blog-image">
-                    <img src="@Url.Content(Model.BackgroundImage)" class="img-responsive img-fluid rounded" alt="Blog Post Image">
+                    <img runat="server" src="@Url.Content(Model.BackgroundImage)" class="img-responsive img-fluid rounded" alt="Blog Post Image">
                 </div>
             </div>
 
