--- a/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
+++ b/devinmajordotcom/Views/MyHome/_HomeSettingsForm.cshtml
@@ -101,7 +101,7 @@
             </div>
             <div class="col-sm-6">
                 @Html.HiddenFor(x => x.BackgroundImage, new { @class = "BackgroundImage", activeimage = "false" })
-                <img src="@Url.Content(Model.BackgroundImage)" activepreview="false" id="previewImage" class="img-responsive previewImage" alt="Background Image">
+                <img runat="server" src="@Url.Content(Model.BackgroundImage)" activepreview="false" id="previewImage" class="img-responsive previewImage" alt="Background Image">
                 @Html.Raw(uploadButton)
             </div>
         </div>
