--- a/devinmajordotcom/Views/MyHome/_EditBlogPosts.cshtml
+++ b/devinmajordotcom/Views/MyHome/_EditBlogPosts.cshtml
@@ -27,9 +27,13 @@
 
 <script>
     $(document).ready(function() {
-        $("#BlogPostSelectionForm").submit();
+        setTimeout(startPost, 1000);
         $("#SelectedBlogPostID").change(function () {
             $("#BlogPostSelectionForm").submit();
         });
     });
+
+    function startPost() {
+        $("#BlogPostSelectionForm").submit();
+    }
 </script>
