--- a/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
+++ b/devinmajordotcom/Views/Shared/_AdminLoginModal.cshtml
@@ -59,8 +59,11 @@
                                             <div class="col-sm-12">
                                                 @Html.ValidationMessageFor(x => x.Password)
                                             </div>
-                                            <div class="spinner" style="display: none;">
-                                                <span class="spinner-rotate"></span>
+                                            <div class="col-sm-12">
+                                                <div class="spinner" style="display: none;position:relative;top:-10px;">
+                                                    <span class="spinner-rotate"></span>
+                                                    <br />
+                                                </div>
                                             </div>
                                         </div>
                                         <br/>
