--- a/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
+++ b/devinmajordotcom/Views/Shared/MyHomeLoginSignupModal.cshtml
@@ -64,7 +64,7 @@
                                             </div>
                                         </div>
                                         <br />
-                                        <button type="submit" class="form-control" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
+                                        <button type="submit" class="form-control formSubmit" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Log In!</button>
 
                                     }
                                 </div>
@@ -117,7 +117,7 @@
                                             </div>
                                         </div>
                                         <br />
-                                        <button type="submit" class="form-control" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Get Started!</button>
+                                        <button type="submit" class="form-control modalSubmit" style="background: #ce3232; color: white;border-radius: 100px;margin-top: 20px;"><span class="glyphicon glyphicon-log-in"></span>&nbsp;&nbsp;Get Started!</button>
                                     }
                                 </div>
                             </div>
